# Puppeteer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
Lib/: Cargo.toml  README.md  app_bkp.rs
Lib/examples/: hello-puppeteer.rs  load_resource.rs
Lib/src/: app.rs  app_env.rs  assets.rs  errors.rs  lib.rs  logging.rs  shell.rs  titlebar.rs  traits.rs  ui_ops.rs  utils.rs
Lib/src/html_utils/: context_menu.rs  mod.rs  title_bar.rs
Puppeteer/: Cargo.toml
Puppeteer/src/: app.rs  errors.rs  helpers.rs  lib.rs  main.rs
Puppeteer/src/dev_operations/: dev_utils.rs  exec_path.rs  manifest.rs  mod.rs  watcher.rs
Puppeteer/src/ui_builder/: blocks.rs  styling.rs  utils.rs
PuppeteerInit/: .gitignore  Cargo.toml  Puppeteer.toml
PuppeteerInit/src/: app.rs  events.rs  exec_path.rs  manifest.rs
PuppeteerInit/src/screens/: root.rs
cli/: Cargo.toml
cli/src/: args.rs  constants.rs  errors.rs  main.rs  utils.rs
examples/: anim.html  anim.rs  custom_title_bar.html  custom_title_bar.rs  elements.rs  simple.css  simple.html  simple.rs
examples/ComplexApp/: Cargo.toml
examples/ComplexApp/pages/: complex.html  splash_screen.html
examples/ComplexApp/src/: main.rs
examples/HelloPuppeteer/: Cargo.toml
examples/HelloPuppeteer/src/: main.rs
lib/: Cargo.toml
lib/examples/: custom_title_bar.html  simple.rs
lib/src/: app.rs  lib.rs  traits.rs
lib/src/ui_builder/: blocks.rs  event_builder.rs  layout.rs  widgets.rs
src/: app.rs  errors.rs  helpers.rs  lib.rs  traits.rs
src/ui_builder/: blocks.rs  constants.rs  error_pages.rs  event_builder.rs  layout.rs  mod.rs  page.rs  percent_five_interval.rs  shell.rs  splashscreen.rs  styling.rs  text.rs  title_bar.rs  utils.rs  widgets.rs
