[package]
name = "puppeteer"
authors = ["Charles Chege <superuser@448.africa>"]
version = "0.2.0-alpha1"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
base64ct = { version = "1.6.0", features = ["std"] }
blake3 = "1.3.3"
hex_color = "2.0.0"
wry = { version = "0.27.3", features = ["linux-headers"] }
