[package]
name = "puppeteer"
authors = ["448 Engineering Developers <superuser@448.africa>"]
version = "1.2.0-alpha1"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
base64ct = { version = "1.6.0", features = ["std"], optional = true }
hex_color = { version = "2.0.0", optional = true }
smol = "1.3.0"
blake3 = { version = "1.4.1", optional = true }
wry = "0.30.0"
arrayvec = "0.7.4"

[features]
default = []
native = ["dep:base64ct", "dep:hex_color", "dep:blake3"]
