[package]
name = "puppeteer"
authors = ["448 Engineering Developers <superuser@448.africa>"]
version = "2.1.2"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MPL-2.0"
homepage = "https://github.com/448-engineering/Puppeteer/"
repository = "https://github.com/448-engineering/Puppeteer/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
async-trait = "0.1.73"
base64ct = { version = "1.6.0", features = ["std"] }
bytes = { version = "1.5.0", default-features = false }
camino = "1.1.6"
file-format = { version = "0.21.0", features = [
    "reader",
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-mp4",
    "reader-pdf",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "reader-zip",
] }
futures-lite = "1.13.0"
once_cell = "1.18.0"
smol = "1.3.0"
thiserror = "1.0.48"
tracing = "0.1.37"
wry = "0.33.0"

[dev-dependencies]
html-to-string-macro = "0.2.5"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
