[package]
name = "puppeteer"
authors = ["448 Engineering Developers <superuser@448.africa>"]
version = "2.4.0"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MPL-2.0"
homepage = "https://github.com/448-engineering/Puppeteer/"
repository = "https://github.com/448-engineering/Puppeteer/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
async-trait = "0.1.74"
base64ct = { version = "1.6.0", features = ["std"] }
blake3 = "1.5.0"
bytes = { version = "1.5.0", default-features = false }
camino = "1.1.6"
file-format = { version = "0.22.0", features = [
    "reader",
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-mp4",
    "reader-pdf",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "reader-zip",
] }
once_cell = "1.18.0"
smol = "1.3.0"
tao = "0.24.0"
thiserror = "1.0.50"
tracing = "0.1.40"
wry = "0.35.0"

[dev-dependencies]
html-to-string-macro = "0.2.5"
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
