[package]
name = "puppeteer"
authors = ["Charles Chege <superuser@448.africa>"]
version = "0.2.0-alpha1"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "puppeteer"
path = "./src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "puppeteer_lib"


[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
blake3 = "1.4.0"
hex_color = "2.0.0"
camino = "1.1.4"
wry = { version = "0.29.0", optional = true }
smol = { version = "1.3.0", optional = true }
notify = { version = "6.0.0", optional = true }
yansi = { version = "0.5.1", optional = true }
cargo_toml = { version = "0.15.3", optional = true }

[features]
default = ["native"]
dev = ["dep:notify", "dep:yansi", "dep:cargo_toml", "dep:smol", "dep:wry"]
native = ["dep:smol", "dep:wry"]
