[package]
name = "puppeteer-types"
authors = ["Charles Chege <superuser@448.africa>"]
version = "0.2.0-alpha1"
edition = "2021"
description = "A Minimal Dependency Easy to Use GUI Builder in Rust using Async Channels"
categories = ["graphics", "gui"]
keywords = ["puppeteer", "gui", "graphics", "web", "frontend"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
blake3 = "1.4.0"
hex_color = "2.0.0"
camino = "1.1.4"
wry = "0.29.0"
